--- a/reniec/pom.xml
+++ b/reniec/pom.xml
@@ -8,7 +8,7 @@
   <name>RENIEC Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <build>
-		<finalName>RENIEC-server</finalName>
+		<finalName>ws-server</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
