--- a/trunk/votacion_onpe/pom.xml
+++ b/trunk/votacion_onpe/pom.xml
@@ -54,6 +54,13 @@
 			<version>3.0.5.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.4</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
  
 </project>
