--- a/trunk/votacion_onpe/pom.xml
+++ b/trunk/votacion_onpe/pom.xml
@@ -7,6 +7,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>onpe Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
   <build>
 		<finalName>ws-server</finalName>
 		<plugins>
@@ -20,34 +21,41 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+  </build>
+  
   <dependencies>
+  
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>3.0.5.RELEASE</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-transports-http</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -68,8 +76,6 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
-        
-	    
 
         <dependency>
             <groupId>taglibs</groupId>
@@ -84,6 +90,24 @@
 	        <scope>runtime</scope>
    		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.jms</groupId>
+			<artifactId>jms</artifactId>
+			<version>1.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+			<version>5.3.0</version>
+		</dependency>
+		
 	</dependencies>
  
 </project>
